--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,5 @@ dependencies {
         transitive = true;
     }
     testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services-maps:10.2.0'
 }
