--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,7 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:10.2.0'
     compile 'com.android.support:cardview-v7:25.3.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.firebase:firebase-database:10.2.0'
 }
+
+apply plugin: 'com.google.gms.google-services'
